--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "nao-pon/flysystem-google-drive",
+    "name": "atroposmental/flysystem-google-drive",
     "description": "Flysystem adapter for Google Drive",
     "license": "MIT",
     "authors": [
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "league/flysystem": "~1.0",
+        "league/flysystem": "^3.11",
         "google/apiclient": "^2.0",
-        "nao-pon/flysystem-cached-extra": "~1.0"
+        "atroposmental/flysystem-cached-extra": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
