--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     "require": {
         "php": ">=5.4.0",
         "league/flysystem": "^3.11",
-        "google/apiclient": "^2.0",
-        "atroposmental/flysystem-cached-extra": "~1.0"
+        "google/apiclient": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "~4.0",
